# flutter-ios-check

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analyzers/: __init__.py  firebase_config_parser.py  ios_config_parser.py  project_scanner.py  project_validator.py  rule_engine.py
analyzers/validators/: __init__.py  ats_validator.py  bundle_identifier_validator.py  deployment_target_validator.py  display_name_validator.py  firebase_validator.py  permission_summary_validator.py  plugin_permission_validator.py  url_scheme_validator.py
models/: __init__.py  analysis_report.py  finding.py  plugin_info.py  project_info.py
reporters/: __init__.py  console.py
rules/: __init__.py  plugins.json
tests/: __init__.py  test_main.py  test_project_scanner.py  test_project_validator.py  test_rule_engine.py
